<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cards"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.suecada.Italiana" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvJ1"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etj1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="39dp"
                android:ems="10"
                android:hint="@string/jogador1"
                android:inputType="textCapWords"
                android:maxLength="10" />

            <EditText
                android:id="@+id/etj2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:ems="10"
                android:hint="@string/jogador2"
                android:inputType="textCapWords"
                android:maxLength="10" />

            <EditText
                android:id="@+id/etj3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/jogador3"
                android:inputType="textCapWords"
                android:maxLength="10" />

            <EditText
                android:id="@+id/etj4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:ems="10"
                android:hint="@string/jogador4"
                android:inputType="textCapWords"
                android:maxLength="10" />

            <EditText
                android:id="@+id/etj5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:ems="10"
                android:hint="@string/jogador5"
                android:inputType="textCapWords"
                android:maxLength="10" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSeguinte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scrollView1"
        android:layout_alignRight="@+id/scrollView1"
        android:layout_below="@+id/scrollView1"
        android:layout_marginTop="40dp"
        android:onClick="guardaNomes"
        android:text="@string/seguinte" />

    <TextView
        android:id="@+id/tvJ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomes"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>